# slambook

ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: CMakeLists.txt  eigenGeometry.cpp  vioqandrtes.cpp
ch4/useSophus/: CMakeLists.txt  testcrossdot.cpp  useSophus.cpp
